<?xml version="1.0"?>
<package format="3">
  <name>depth_anything_ros</name>
  <version>0.0.1</version>
  <description>Depth Anything V2 ROS package</description>
  <maintainer email="oh@jsk.imi.i.u-tokyo.ac.jp">Jihoon Oh</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-catkin-pkg-modules</buildtool_depend>

  <!-- Build Dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>jsk_data</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>depth_image_proc</build_depend>

  <!-- Execute Dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>jsk_data</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>rviz</exec_depend>

  <!-- 修改 export 標籤 -->
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
    <depth_image_proc plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
